--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   page_transition: ^2.2.1
+  supabase_flutter: ^2.8.4
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
