--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   page_transition: ^2.2.1
   supabase_flutter: ^2.8.4
   firebase_core: ^3.12.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
