--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   firebase_core: ^3.12.1
   image_picker: ^1.1.2
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_test:
