--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.12.1
   image_picker: ^1.1.2
   cloud_firestore: ^5.6.6
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
